@@ -399,6 +399,14 @@ Bugzilla   : 13732
 Description: change order of libsysio includes
 Details    : '#include sysio.h' should always come before '#include xtio.h'
 
+Severity   : normal
+Bugzilla   : 11673
+Description: handle "serious error: objid * already exists" more gracefully
+Details    : If LAST_ID value on disk is smaller than the objects existing in
+             the O/0/d* directories, it indicates disk corruption and causes an
+             LBUG(). If the object is 0-length, then we should use the existing
+             object. This will help to avoid a full fsck in most cases.
+
 --------------------------------------------------------------------------------
 
 2007-08-10         Cluster File Systems, Inc. <info@clusterfs.com>
